# PhishSongPrediction

./: README.md  pyproject.toml
code/: EDA.ipynb  Model0-Recreated.ipynb  Model0-Recreated_WithEmbedding.ipynb  Model1-LSTM.ipynb  Model2-GraphEmbedding.ipynb  Model3-GPT.ipynb  Model4-Transformer.ipynb  README.md  phishDataPipeline.py
data/: README.md  allphishsets.csv
docs/: FinalReport.aux  FinalReport.out  FinalReport.tex  README.md
docs/proposal/: Automated Fruit Quality Control System.docx  fruit_proposal.md  project_proposal.md
